--- a/views/index.haml
+++ b/views/index.haml
@@ -10,11 +10,17 @@
       %li
         %a /
       %li
+        %a.scroll(href="#works")CEO
+      %li
+        %a /
+      %li
         %a.scroll(href="#contacts")Контакты
       %li
-        %select
-          %option ru
-          %option es
+        %a.flags.ru_flag
+      %li
+        %a.flags.es_flag
+      %li
+        %a.flags.gb_flag
   %span#logo
 %section#about.container_12
   %h1 О нас
